--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "URLShortener",
   "version": "1.0.0",
   "description": "Projeto encurtador de URL - Desenvolvimento Back-end para Aplicações Mobile",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "git@github.com:alexdiegos/URLShortener.git",
   "author": "Alexandre Silva <adiegossilva@gmail.com>",
   "license": "MIT",
   "scripts": {
     "test:unit": "jest",
     "generate:doc": "jsdoc -r src",
-    "start": "nodemon index.js"
+    "start": "nodemon src/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -18,7 +18,8 @@
     "jsdoc": "^3.6.11",
     "mysql": "^2.18.1",
     "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0"
+    "swagger-ui-express": "^4.5.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
