--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
   "author": "Alexandre Silva <adiegossilva@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test:unit": "jest",
     "generate:doc": "jsdoc -r src",
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js",
+    "dev": "NODE_ENV=test nodemon src/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "jest": "^28.1.3",
     "jsdoc": "^3.6.11",
     "mysql": "^2.18.1",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
+    "winston": "^3.8.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
