--- a/.ebextensions/environmentvariables.config
+++ b/.ebextensions/environmentvariables.config
@@ -1,6 +1,7 @@
-aws:elasticbeanstalk:application:environment:
-    PORT=8081
-    DB_HOST=urlshortenerdb.cdueplnz1rp4.us-east-1.rds.amazonaws.com
-    DB_USER=urlshortenerUsr
-    DB_PASS=358nCQ5ltZb0%ABwuI2o
-    DB_NAME=urlshortenerdb
+open_settings:
+    aws:elasticbeanstalk:application:environment:
+        PORT:'8081'
+        DB_HOST:'urlshortenerdb.cdueplnz1rp4.us-east-1.rds.amazonaws.com'
+        DB_USER:'urlshortenerUsr'
+        DB_PASS:'358nCQ5ltZb0%ABwuI2o'
+        DB_NAME:'urlshortenerdb'
