--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "jsdoc": "^3.6.11",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
     "winston": "^3.8.1",
